--- a/scoreboard.html
+++ b/scoreboard.html
@@ -14,8 +14,8 @@
         <!-- REACT OWNS THIS DIV. HANDS OFF! -->
         <div id="root"></div>
 
-        <script src="https://unpkg.com/react@16.3.2/umd/react.development.js"></script>
-        <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+        <script src="https://unpkg.com/react@15.1.0/dist/react.js"></script>
+        <script src="https://unpkg.com/react-dom@15.1.0/dist/react-dom.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
         <script type="text/babel" src="./scoreboard.jsx"></script>
     </body>
